Updated documentation example
