# product-api/9_docs/handlers/get.go
@@ -6,6 +6,11 @@ import (
 	"github.com/PacktPublishing/Building-Microservices-with-Go-Second-Edition/product-api/9_docs/data"
 )
 
+// swagger:route GET /products products listProducts
+// Return a list of products from the database
+// responses:
+//	200: productsResponse
+
 // ListAll handles GET requests and returns all current products
 func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 	p.l.Println("[DEBUG] get all records")
@@ -14,10 +19,16 @@ func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 
 	err := data.ToJSON(prods, rw)
 	if err != nil {
+		// we should never be here but log the error just incase
 		p.l.Println("[ERROR] serializing product", err)
-		http.Error(rw, "Error serialzing products", http.StatusInternalServerError)
 	}
 }
+
+// swagger:route GET /products/{id} products listSingle
+// Return a list of products from the database
+// responses:
+//	200: productResponse
+//	404: errorResponse
 
 // ListSingle handles GET requests
 func (p *Products) ListSingle(rw http.ResponseWriter, r *http.Request) {
@@ -26,7 +37,17 @@ func (p *Products) ListSingle(rw http.ResponseWriter, r *http.Request) {
 	p.l.Println("[DEBUG] get record id", id)
 
 	prod, err := data.GetProductByID(id)
-	if err != nil {
+
+	switch err {
+	case nil:
+
+	case data.ErrProductNotFound:
+		p.l.Println("[ERROR] fetching product", err)
+
+		rw.WriteHeader(http.StatusNotFound)
+		data.ToJSON(&GenericError{Message: err.Error()}, rw)
+		return
+	default:
 		p.l.Println("[ERROR] fetching product", err)
 
 		rw.WriteHeader(http.StatusInternalServerError)
@@ -34,17 +55,9 @@ func (p *Products) ListSingle(rw http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	if err != data.ErrProductNotFound {
-		p.l.Println("[ERROR] fetching product", err)
-
-		rw.WriteHeader(http.StatusNotFound)
-		data.ToJSON(&GenericError{Message: err.Error()}, rw)
-		return
-	}
-
 	err = data.ToJSON(prod, rw)
 	if err != nil {
+		// we should never be here but log the error just incase
 		p.l.Println("[ERROR] serializing product", err)
-		http.Error(rw, "Error serialzing products", http.StatusInternalServerError)
 	}
 }
