# product-api/9_docs/handlers/post.go
@@ -6,10 +6,19 @@ import (
 	"github.com/PacktPublishing/Building-Microservices-with-Go-Second-Edition/product-api/9_docs/data"
 )
 
+// swagger:route POST /products products createProduct
+// Create a new product
+//
+// responses:
+//	200: productResponse
+//  422: errorValidation
+//  501: errorResponse
+
 // Create handles POST requests to add new products
 func (p *Products) Create(rw http.ResponseWriter, r *http.Request) {
+	// fetch the product from the context
 	prod := r.Context().Value(KeyProduct{}).(data.Product)
-	data.AddProduct(prod)
 
-	p.l.Printf("[DEBUG] Inserted product: %#v\n", prod)
+	p.l.Printf("[DEBUG] Inserting product: %#v\n", prod)
+	data.AddProduct(prod)
 }
