# product-api/9_docs/swagger.yaml
@@ -2,6 +2,14 @@ basePath: /
 consumes:
 - application/json
 definitions:
+  GenericError:
+    description: GenericError is a generic error message returned by a server
+    properties:
+      message:
+        type: string
+        x-go-name: Message
+    type: object
+    x-go-package: github.com/PacktPublishing/Building-Microservices-with-Go-Second-Edition/product-api/9_docs/handlers
   Product:
     description: Product defines the structure for an API product
     properties:
@@ -9,7 +17,9 @@ definitions:
         type: string
         x-go-name: Description
       id:
+        description: the id for this user
         format: int64
+        minimum: 1
         type: integer
         x-go-name: ID
       name:
@@ -23,7 +33,17 @@ definitions:
         type: string
         x-go-name: SKU
     type: object
-    x-go-package: github.com/PacktPublishing/Building-Microservices-with-Go-Second-Edition/product-api/8_validation/data
+    x-go-package: github.com/PacktPublishing/Building-Microservices-with-Go-Second-Edition/product-api/9_docs/data
+  ValidationError:
+    description: ValidationError is a collection of validation error messages
+    properties:
+      messages:
+        items:
+          type: string
+        type: array
+        x-go-name: Messages
+    type: object
+    x-go-package: github.com/PacktPublishing/Building-Microservices-with-Go-Second-Edition/product-api/9_docs/handlers
 info:
   description: Documentation for Product API
   title: of Product API
@@ -53,11 +73,35 @@ paths:
       responses:
         "200":
           $ref: '#/responses/productResponse'
+        "422":
+          $ref: '#/responses/errorValidation'
         "501":
           $ref: '#/responses/errorResponse'
       tags:
       - products
   /products/{id}:
+    delete:
+      description: Update a products details
+      operationId: deleteProduct
+      responses:
+        "201":
+          $ref: '#/responses/noContentResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "501":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
+    get:
+      description: Return a list of products from the database
+      operationId: listSingle
+      responses:
+        "200":
+          $ref: '#/responses/productResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
     put:
       description: Update a products details
       operationId: updateProduct
@@ -82,13 +126,21 @@ paths:
           $ref: '#/responses/noContentResponse'
         "404":
           $ref: '#/responses/errorResponse'
+        "422":
+          $ref: '#/responses/errorValidation'
       tags:
       - products
 produces:
 - application/json
 responses:
   errorResponse:
-    description: An error message returned when the request can not be completed
+    description: Generic error message returned as a string
+    schema:
+      $ref: '#/definitions/GenericError'
+  errorValidation:
+    description: Validation errors defined as an array of strings
+    schema:
+      $ref: '#/definitions/ValidationError'
   noContentResponse:
     description: No content is returned by this API endpoint
   productResponse:
